--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,28 @@
-apply plugin: 'com.android.model.application'
+apply plugin: 'com.android.application'
 
-model {
-    android {
-        compileSdkVersion 23
-        buildToolsVersion "23.0.2"
+android {
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
-        defaultConfig {
-            applicationId "com.poly.ejiek.pitcher"
-            minSdkVersion.apiLevel 22
-            targetSdkVersion.apiLevel 23
-            versionCode 1
-            versionName "1.0"
-        }
-        buildTypes {
-            release {
-                minifyEnabled false
-                proguardFiles.add(file('proguard-android.txt'))
-            }
-        }
-        ndk {
-            moduleName = "jni-wrapper"
+    defaultConfig {
+        applicationId "com.poly.ejiek.pitcher"
+        minSdkVersion 22
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile files('libs/TarsosDSP-Android-latest.jar')
+    compile "com.androidplot:androidplot-core:0.9.8"
 }
